Moving spring from version 1.2.7 to 1.3.3 Adding support to mysql. But it doesnt work very well. And it broke json serialization for ExchangeRate class.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 logging.level.org.springframework.web=DEBUG
 
 server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost/ecb_conversion
+spring.datasource.username=dbecb
+spring.datasource.password=dbecbpass
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
