Skeleton for front end:  * Gulp configuration with broserify.  * Frontend-maven-plugin for everything related to calling gulp and node Some dummy content to check that the configuration works.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 # For details of what options are available: 
-# http://docs.spring.io/spring-boot/docs/1.2.7.RELEASE/reference/htmlsingle/#appendix
+# http://docs.spring.io/spring-boot/docs/1.3.3.RELEASE/reference/htmlsingle/#appendix
 
 logging.level.org.springframework.web=DEBUG
 
+server.address=localhost
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost/ecb_conversion
 spring.datasource.username=dbecb
 spring.datasource.password=dbecbpass
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# MVC
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
