--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Foreign Exchange Rate Service",
   "dependencies": {
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.3"
   },
@@ -17,6 +19,11 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "vinyl-paths": "^2.1.0"
   },
   "browser": {
